--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" style="width: 4rem; height: 4rem;" alt=""></a>
+                        <a href="./index.html"><img src="img/logo.png" style="width: 2rem; height: 2rem;" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
@@ -129,10 +129,9 @@
 
     <!-- Map Begin -->
     <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d111551.9926412813!2d-90.27317134641879!3d38.606612219170856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sbd!4v1597926938024!5m2!1sen!2sbd" height="500" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.311064863315!2d106.7006594735583!3d-6.482232163374852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69c60359a515b5%3A0xea2556697fe39eac!2sMarsudirini%20Senior%20High%20School!5e0!3m2!1sen!2sid!4v1737426761659!5m2!1sen!2sid" width="600" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <!-- Map End -->
-
     <!-- Contact Section Begin -->
     <section class="contact spad">
         <div class="container">
@@ -147,12 +146,12 @@
                         </div>
                         <ul>
                             <li>
-                                <h4>America</h4>
-                                <p>195 E Parker Square Dr, Parker, CO 801 <br />+43 982-314-0958</p>
+                                <h4>SMA Marsudirini Bogor</h4>
+                                <p>Jl. Perumahan Telaga Kahuripan No.Km. 47, RW.5, Tegal, Kec. Kemang, Kabupaten Bogor, Jawa Barat 163s10</p>
                             </li>
                             <li>
-                                <h4>France</h4>
-                                <p>109 Avenue Léon, 63 Clermont-Ferrand <br />+12 345-423-9893</p>
+                                <h4>Yayasan Marsudirini</h4>
+                                <p>Jl. Ronggowarsito No.8, Tj. Mas, Kec. Semarang Utara, Kota Semarang, Jawa Tengah 50174</p>
                             </li>
                         </ul>
                     </div>
@@ -187,7 +186,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                        <a href="#"><img src="img/footer-logo.png" style="width: 4rem; height: 4rem;"  alt=""></a>
                         </div>
                         <p>The customer is at the heart of our unique business model, which includes design.</p>
                         <a href="#"><img src="img/payment.png" alt=""></a>
