--- a/index.html
+++ b/index.html
@@ -636,9 +636,8 @@
                 <div class="col-lg-4">
                     <div class="instagram__text">
                         <h2>Instagram</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua.</p>
-                        <h3>#Nusantara_Fashion</h3>
+                        <p> Bukan sekadar kain, tapi cerita panjang peradaban. Mari kita kenakan dengan bangga Jadikan wastra sebagai statement fashionmu. Tunjukkan bahwa kamu</p>
+                        <h3>#CINTANusantara_Fashion</h3>
                     </div>
                 </div>
             </div>
